# exobrain

./: .gitattributes  .gitignore  CLAUDE.md  CONSOLIDATION.md  DECISIONS.md  EVALUATION.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
eval/: cases.jsonl  queries.sql  schema.sql
example/: CLAUDE.md  writing-rules.md
example/raw/session-captures/: 2026-06-22-rebase-keeps-history-linear.md
example/wiki/: atomic-commits.md  imperative-commit-subjects.md  index.md
tools/: auto_ingest.py  common.py  consolidate.py  distill.py  eval.py  eval_db.py  health_check.py  memory_backend.py  session-start-hook.sh  verify_auto_ingest.py  verify_distill.py  verify_eval.py  verify_health_check.py  verify_memory_backend.py  verify_observability.py
